added openvpn for bananapi

--- a/banana-pi/openvpn/Dockerfile
+++ b/banana-pi/openvpn/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:18.04
 MAINTAINER marcocspc
 
-RUN apt update
-RUN apt install openvpn
+RUN apt-get update
+RUN apt-get install openvpn -y
 
 RUN sed -e 's/#AUTOSTART="all"/AUTOSTART="all"/' /etc/default/openvpn > /etc/default/openvpn
