added openvpn for bananapi

--- a/banana-pi/openvpn/Dockerfile
+++ b/banana-pi/openvpn/Dockerfile
@@ -4,6 +4,4 @@ MAINTAINER marcocspc
 RUN apt-get update
 RUN apt-get install openvpn -y
 
-RUN sed -e 's/#AUTOSTART="all"/AUTOSTART="all"/' /etc/default/openvpn > /etc/default/openvpn
-
-ENTRYPOINT service openvpn start
+ENTRYPOINT /usr/sbin/openvpn /etc/openvpn/server.conf
