added openvpn for bananapi

--- a/banana-pi/openvpn/Dockerfile
+++ b/banana-pi/openvpn/Dockerfile
@@ -3,5 +3,6 @@ MAINTAINER marcocspc
 
 RUN apt-get update
 RUN apt-get install openvpn -y
+RUN rm -rf /etc/openvpn/*
 
 ENTRYPOINT /usr/sbin/openvpn /etc/openvpn/server.conf
