--- a/raspberry-pi/pihole/Dockerfile
+++ b/raspberry-pi/pihole/Dockerfile
@@ -1,4 +1,4 @@
 FROM pihole/pihole:latest 
 MAINTAINER marcocspc
 
-sed -i '/server.port/c\server.port                 = 8080' /etc/lighttpd/lighttpd.conf 
+RUN sed -i '/server.port/c\server.port                 = 8080' /etc/lighttpd/lighttpd.conf 
